Resolve all 23 code-review findings in the carddemo-java batch, online and data tiers
Addresses every finding from the Boundary D (BACKEND<->DATABASE) review:
1 CRITICAL, 16 MAJOR, 6 MINOR. Review status was NOT APPROVED.

CRITICAL
  C-01 Remove the persistent job-submission outbox, which replayed another
       call's pending cards and added a twelfth table the AAP does not
       sanction - feature expansion the legacy TDQ has no counterpart for.
       submitJobStream now publishes only its own cards, once, inside the
       advisory lock, stopping at its own first failure, matching
       ERROROPTION(IGNORE). Drops the outbox table from V2. (DL-148..150)

MAJOR
  M-01 PRTCATBL EDIT=(TTTTTTTTT.TT) renders all nine integer and both
       fraction digits; zero is 000000000.00, never blank. (DL-159)
  M-02 Split the bill-payment turn into two independent units of work, so a
       committed transaction insert can no longer be rolled back by a later
       account rewrite. Keeps max-id+1 and the empty-file seed. (DL-166)
  M-03 Walk the statement cross-reference with one bounded cursor instead of
       an offset page per record, and translate every repository failure into
       a raw two-byte status so CBSTM03A's own error arm runs. (DL-174)
  M-04 Add the WHEN OTHER arms COACTUPC states for the cross-reference,
       account, customer and update-hold reads. (DL-168)
  M-05 Read, compare and write the user record in one unit of work under a
       keyed write lock, matching the single CICS UOW. (DL-167)
  M-06 Establish the invalid-key answer under a write lock before the
       posting rewrite, instead of asking afterwards whether the row exists.
       (DL-170)
  M-07 Write each synthesized interest record while its group is still open,
       before the account rewrite commits. (DL-171)
  M-08 Replace all three offset browses - card list, transaction list, user
       list - with bounded keyset cursors preserving fill order. (DL-163)
  M-09 One authority for t